--- a/src/styles.css
+++ b/src/styles.css
@@ -2,26 +2,43 @@
   background-color: #8758ff;
   text-align: center;
   color: white;
+  margin-top: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  border: 2px solid black;
 }
 
 .add-btn {
   margin: 0px 0px 10px 10px;
-  height: 40px;
+  height: 30px;
   border: 1px solid white;
 }
 
-.input-todo {
-  align-items: center;
+.filter {
+  margin-right: 140px;
 }
 
-.filter-btn {
-  padding-bottom: 100px !important;
+li {
+  list-style-type: none;
 }
 
-.text-center {
-  padding: 10px;
+.edit-btn {
+  margin: 10px;
 }
 
-.btn-secondary {
-  border: 1px solid white;
+.delete-btn {
+  margin: 10px;
+}
+
+.checkbox {
+  width: 30px;
+  height: 15px;
+  justify-content: left;
+}
+
+span {
+  font-size: 22px;
+}
+
+.output {
 }
