--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,38 @@
 .Todo {
-  background-color: #8758ff;
+  background-color: #ffabab;
   text-align: center;
-  color: white;
+  color: #d14d72;
   margin-top: 100px;
   padding-top: 100px;
   padding-bottom: 100px;
-  border: 2px solid black;
+  border: 2px solid #d14d72;
 }
 
 .add-btn {
   margin: 0px 0px 10px 10px;
   height: 30px;
-  border: 1px solid white;
+  background-color: #d14d72;
+  border: 2px solid #fef2f4;
+  color: #fef2f4;
+  border-radius: 6px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+  margin-top: 10px;
+}
+
+input {
+  border: 2px solid #d14d72;
+  border-radius: 6px;
 }
 
 .filter {
   margin-right: 140px;
+}
+
+.option-drp {
+  background-color: #d14d72;
+  border: 2px solid #fef2f4;
+  color: #fef2f4;
+  border-radius: 6px;
 }
 
 li {
@@ -27,18 +44,39 @@ li {
 }
 
 .delete-btn {
-  margin: 10px;
+  margin: 2px;
 }
 
-.checkbox {
+/* .checkbox {
   width: 30px;
   height: 15px;
   justify-content: left;
-}
+} */
 
 span {
   font-size: 22px;
 }
 
+.check {
+  cursor: pointer;
+}
+
+.edit-btn {
+  background-color: #d14d72;
+  border: 2px solid #fef2f4;
+  color: #fef2f4;
+  border-radius: 6px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+}
+
+.delete-btn {
+  background-color: #d14d72;
+  border: 2px solid #fef2f4;
+  color: #fef2f4;
+  border-radius: 6px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+}
+
 .output {
+  margin-top: 10px;
 }
